OK, for bug fixes this is a pretty big checkin!!   :-/
I finally was able to see the HTML Editor bug in IE/XP that everyone
was talking about, and it's a very serious bug as it makes Moodle 1.3
almost unusable for these people.  :-(  :-(

So, I eventually found out that the problem is that the Javascript that
attaches the editor has troubles when it is embedded within the table                                                   that course/mod.php puts around the mod.html forms in each module.
(Only in IE and only sometimes, mind you).

While testing I also had a good look at a long standing issue which is the
inconsistency of the mod.html forms when using the editor.

So, to fix both I decided to put the HTML editor calls OUTSIDE the mod.html
in the mod.php file.  This means that all modules get the HTML editor by default
on all text areas during activity module setup by default.

I've been running through this for the past few hours and it seems
pretty stable now and a lot more consistent, so I'm checking it in
as big fix towards the Moodle 1.3.1 we have to have.

Unfortunately it also means the API has changed a bit  ... I had to
update all the module dependencies to this exact version (or later).

Please test this "stable" version hard using the standard modules only
and I'll merge these changes over to the trunk in a day or so and update
all known third-party modules.

--- a/mod/assignment/mod.html
+++ b/mod/assignment/mod.html
@@ -1,9 +1,4 @@
 <?php
-    if ($usehtmleditor = can_use_richtext_editor()) {
-        $defaultformat = FORMAT_HTML;
-    } else {
-        $defaultformat = FORMAT_MOODLE;
-    }
     if (empty($form->name)) {
         $form->name = "";
     }
@@ -30,15 +25,15 @@
     }
 ?>
 
-<form name="form" method="post" <?php echo $onsubmit ?> action="mod.php">
-<table cellpadding=5>
-<tr valign=top>
+<form name="form" method="post" action="mod.php">
+<table cellpadding="5">
+<tr valign="top">
     <td align=right><p><b><?php print_string("assignmentname", "assignment") ?>:</b></p></td>
     <td>
         <input type="text" name="name" size=60 value="<?php p($form->name) ?>">
     </td>
 </tr>
-<tr valign=top>
+<tr valign="top">
     <td align=right><p><b><?php print_string("description", "assignment") ?>:</b></p>
     <font size="1">
      <?php
@@ -59,23 +54,27 @@
     <?php
        print_textarea($usehtmleditor, 20, 60, 680, 400, "description", $form->description);
     
-       echo "<p align=right>";
-       helpbutton("textformat", get_string("formattexttype"));
-       print_string("formattexttype");
-       echo ":&nbsp;";
-       if (!$form->format) {
-           $form->format = $defaultformat;
+       if ($usehtmleditor) {
+           echo '<input type="hidden" name="format" value="'.FORMAT_HTML.'" />';
+       } else {
+           echo '<p align="right">';
+           helpbutton("textformat", get_string("formattexttype"));
+           print_string("formattexttype");
+           echo ':&nbsp;';
+           if (!$form->format) {
+               $form->format = $defaultformat;
+           }
+           choose_from_menu(format_text_menu(), "format", $form->format, ""); 
+           echo '</p>';
        }
-       choose_from_menu(format_text_menu(), "format", $form->format, ""); 
-       echo "</p>";
     ?>
     </td>
 </tr>
-<tr valign=top>
+<tr valign="top">
     <td align=right><p><b><?php print_string("assignmenttype", "assignment") ?>:</b></p></td>
     <td>
     <?php
-       require("$CFG->dirroot/mod/assignment/lib.php");
+       require_once("$CFG->dirroot/mod/assignment/lib.php");
        asort($ASSIGNMENT_TYPE);
        choose_from_menu($ASSIGNMENT_TYPE, "type", $form->type, "");
        helpbutton("assignmenttype", get_string("assignmenttype", "assignment"), "assignment");
@@ -119,21 +118,14 @@
 </table>
 <br />
 <center>
-<input type="hidden" name=course     value="<?php p($form->course) ?>">
-<input type="hidden" name=coursemodule  value="<?php p($form->coursemodule) ?>">
-<input type="hidden" name=section       value="<?php p($form->section) ?>">
-<input type="hidden" name=module     value="<?php p($form->module) ?>">
-<input type="hidden" name=modulename value="<?php p($form->modulename) ?>">
-<input type="hidden" name=instance   value="<?php p($form->instance) ?>">
-<input type="hidden" name=mode       value="<?php p($form->mode) ?>">
-<input type="submit" value="<?php print_string("savechanges") ?>">
-<input type="submit" name=cancel value="<?php print_string("cancel") ?>">
+<input type="hidden" name=course     value="<?php p($form->course) ?>" />
+<input type="hidden" name=coursemodule  value="<?php p($form->coursemodule) ?>" />
+<input type="hidden" name=section       value="<?php p($form->section) ?>" />
+<input type="hidden" name=module     value="<?php p($form->module) ?>" />
+<input type="hidden" name=modulename value="<?php p($form->modulename) ?>" />
+<input type="hidden" name=instance   value="<?php p($form->instance) ?>" />
+<input type="hidden" name=mode       value="<?php p($form->mode) ?>" />
+<input type="submit" value="<?php print_string("savechanges") ?>" />
+<input type="submit" name=cancel value="<?php print_string("cancel") ?>" />
 </center>
 </form>
-
-<?php 
-   if ($usehtmleditor) { 
-       print_richedit_javascript("form", "description", "yes");
-   }
-?>
-
