--- a/mod/exercise/mod.html
+++ b/mod/exercise/mod.html
@@ -22,6 +22,8 @@
     if (empty($form->deadline)) {
         $form->deadline = "";
     }
+
+    $nohtmleditorneeded = true;
 ?>
 
 <form name="form" method="post" action="mod.php">
@@ -49,7 +51,7 @@
             $grades[$i] = $i;
         }
         choose_from_menu($grades, "grade", "$form->grade", "");
-       helpbutton("grade", get_string("maximumgrade", "exercise"), "exercise");
+        helpbutton("grade", get_string("maximumgrade", "exercise"), "exercise");
         ?>
     </td>
 </tr>
@@ -83,7 +85,7 @@
             $numbers[$i] = $i;
         }
         choose_from_menu($numbers, "nelements", "$form->nelements", "");
-       helpbutton("nelements", get_string("numberofassessmentelements", "exercise"), "exercise");
+        helpbutton("nelements", get_string("numberofassessmentelements", "exercise"), "exercise");
         ?>
     </td>
 </tr>
