--- a/mod/resource/mod.html
+++ b/mod/resource/mod.html
@@ -14,6 +14,7 @@
     if (empty($form->alltext)) {
         $form->alltext = "";
     }
+    $nohtmleditorneeded = true;
 ?>
 
 
@@ -54,7 +55,7 @@
      </font>
     </td>
     <td>
-        <textarea name="summary" rows=5 cols=50 wrap="virtual"><?php p($form->summary) ?></textarea>
+        <?php print_textarea(false, 7, 50, 680, 400, "summary", $form->summary); ?>
     </td>
 </tr>
 </table>
