Changed multiple occurrences of help icon in non-HTML modes, to one occurrence for all modes.

--- a/lang/en/help/wiki/howtowiki.html
+++ b/lang/en/help/wiki/howtowiki.html
@@ -113,9 +113,18 @@ Please always put an empty line before and after a table, so it stands out from 
   <li> alternatively you could use the ImageUploading function</li>
   </ul>
 
-<h4> More markup</h4>
+<h4>Further readings</h4>
+There are more possibilities for Wiki mark-up. Please consult the <a href="http://erfurtwiki.sourceforge.net" target=_new>Erfurt Wiki Homepage</a> for more information.
 
 <p>
-Please see the page about ExtendedWikiMarkup</a>, if you'd like to know a bit
-more about available markup.
-</p>
+<a name="camelcase"></a><b>Camel Case</b>:<br />
+CamelCase describes what WikiWords look like. Multiple words, joined together without
+spaces, separated by changes in case. The uppercase and
+lowercase letters show up like the humps of camels.</p>
+<p>
+This linking scheme is often also called BumpyText.</p>
+<p>
+While language purists hate Wikis for that naming scheme, it is very common in the 
+computing world and well known to most programmers.</p>
+
+
