Allow editor on Wiki summary

--- a/mod/wiki/mod.html
+++ b/mod/wiki/mod.html
@@ -50,7 +50,7 @@
 <TR valign=top>
     <TD align=right><P><B><?php  print_string('summary') ?>:</B></P></TD>
     <TD>
-        <?php print_textarea(false, 5, 60, 680, 400, "summary", $form->summary); ?>
+        <?php print_textarea($usehtmleditor, 5, 60, 680, 400, "summary", $form->summary); ?>
     </TD>
 </TR>
 
