--- a/lang/en/help/wiki/wikiname.html
+++ b/lang/en/help/wiki/wikiname.html
@@ -1,9 +1,8 @@
 <P ALIGN=CENTER><B>Initial Page Name for wiki</B></P>
 <P>
-You can select a name to give to the initial wiki page here. This name will become the first 
-page of the wiki whenever it is viewed from the course. If you do not specify a name in wiki 
-'camel case' (mixed upper and lower case words, compressed together - e.g. 'WikiName'), then 
-whatever you enter will be forced into camel case.<br><br>
+If you want the first wiki page name to be something other than the
+wiki name, you can specify it here. This name will become the first 
+page of the wiki for every created instance of this wiki.<br><br>
 
 If you leave this field blank, the initial page name will be the wiki name, unless you select
 a page in the 'initial page' field.
