--- a/admin/config.html
+++ b/admin/config.html
@@ -2,8 +2,8 @@
 
 <table cellpadding=9 cellspacing=0 >
 <tr valign=top>
-	<td align=right><p>lang:</td>
-	<td>
+    <td align=right><p>lang:</td>
+    <td>
     <?php choose_from_menu (get_list_of_languages(), "lang", $config->lang, "", "", ""); ?>
     </td>
     <td>
@@ -11,8 +11,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>langmenu:</td>
-	<td>
+    <td align=right><p>langmenu:</td>
+    <td>
     <?php
        unset($options);
        $options[0] = get_string("no");
@@ -26,8 +26,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>langlist:</td>
-	<td>
+    <td align=right><p>langlist:</td>
+    <td>
     <input name=langlist type=text size=40 value="<?php p($config->langlist) ?>">
     </td>
     <td>
@@ -35,8 +35,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>locale:</td>
-	<td>
+    <td align=right><p>locale:</td>
+    <td>
     <input name=locale type=text size=10 value="<?php p($config->locale) ?>">
     </td>
     <td>
@@ -44,7 +44,7 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>timezone:</td>
+    <td align=right><p>timezone:</td>
     <td><?php
        if (abs($config->timezone) > 13) {
            $config->timezone = 99;
@@ -71,16 +71,16 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>country:</td>
-	<td><?php choose_from_menu (get_list_of_countries(), "country", $config->country, get_string("selectacountry"), "") ?>
-	</td>
+    <td align=right><p>country:</td>
+    <td><?php choose_from_menu (get_list_of_countries(), "country", $config->country, get_string("selectacountry"), "") ?>
+    </td>
     <td>
     <?php print_string("configcountry") ?>
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>smtphosts:</td>
-	<td>
+    <td align=right><p>smtphosts:</td>
+    <td>
     <input name=smtphosts type=text size=30 value="<?php p($config->smtphosts)?>">
     </td>
     <td>
@@ -88,8 +88,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>smtpuser:</td>
-	<td>
+    <td align=right><p>smtpuser:</td>
+    <td>
     <input name=smtpuser type=text size=10 value="<?php p($config->smtpuser)?>">
     </td>
     <td rowspan=2>
@@ -97,14 +97,23 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>smtppass:</td>
-	<td>
+    <td align=right><p>smtppass:</td>
+    <td>
     <input name=smtppass type=text size=10 value="<?php p($config->smtppass)?>">
     </td>
-</TR>
+</tr>
 <tr valign=top>
-	<td align=right><p>gdversion:</td>
-	<td>
+    <td align=right><p>noreplyaddress:</td>
+    <td>
+    <input name=noreplyaddress type=text size=30 value="<?php p($config->noreplyaddress)?>">
+    </td>
+    <td>
+    <?php print_string("confignoreplyaddress") ?>
+    </td>
+</tr>
+<tr valign=top>
+    <td align=right><p>gdversion:</td>
+    <td>
     <?php
        unset($options);
        $options[0] = get_string("gdnot");
@@ -135,8 +144,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>maxeditingtime:</td>
-	<td>
+    <td align=right><p>maxeditingtime:</td>
+    <td>
     <?php
        unset($options);
        $options[3600] = get_string("numminutes", "", 60);
@@ -154,8 +163,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>longtimenosee:</td>
-	<td>
+    <td align=right><p>longtimenosee:</td>
+    <td>
     <?php
        unset($options);
        $options[1000] = get_string("numdays", "", 1000);
@@ -178,8 +187,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>deleteunconfirmed:</td>
-	<td>
+    <td align=right><p>deleteunconfirmed:</td>
+    <td>
     <?php
        unset($options);
        $options[0]    = get_string("never");
@@ -202,8 +211,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>loglifetime:</td>
-	<td>
+    <td align=right><p>loglifetime:</td>
+    <td>
     <?php
        unset($options);
        $options[0]    = get_string("neverdeletelogs");
@@ -224,8 +233,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>sessiontimeout:</td>
-	<td>
+    <td align=right><p>sessiontimeout:</td>
+    <td>
     <?php
        unset($options);
        $options[14400] = get_string("numhours", "", 4);
@@ -246,8 +255,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>sessioncookie:</td>
-	<td>
+    <td align=right><p>sessioncookie:</td>
+    <td>
     <input name=sessioncookie type=text size=10 value="<?php p($config->sessioncookie)?>">
     </td>
     <td>
@@ -255,8 +264,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>zip:</td>
-	<td>
+    <td align=right><p>zip:</td>
+    <td>
     <input name=zip type=text size=30 value="<?php p($config->zip) ?>">
     </td>
     <td>
@@ -264,8 +273,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>unzip:</td>
-	<td>
+    <td align=right><p>unzip:</td>
+    <td>
     <input name=unzip type=text size=30 value="<?php p($config->unzip) ?>">
     </td>
     <td>
@@ -273,8 +282,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>slasharguments:</td>
-	<td>
+    <td align=right><p>slasharguments:</td>
+    <td>
     <?php unset($options);
        $options[0] = "file.php?file=/pic.jpg";
        $options[1] = "file.php/pic.jpg";
@@ -287,8 +296,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>proxyhost:</td>
-	<td>
+    <td align=right><p>proxyhost:</td>
+    <td>
     <input name=proxyhost type=text size=30 value="<?php p($config->proxyhost) ?>">
     </td>
     <td rowspan=2>
@@ -296,14 +305,14 @@
     </td>
 </TR>
 <tr valign=top>
-	<td align=right><p>proxyport:</td>
-	<td>
+    <td align=right><p>proxyport:</td>
+    <td>
     <input name=proxyport type=text size=5 value="<?php p($config->proxyport) ?>">
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>debug:</td>
-	<td>
+    <td align=right><p>debug:</td>
+    <td>
     <?php
        unset($options);
        $options[7]  = get_string("no");
@@ -317,8 +326,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>framename:</td>
-	<td>
+    <td align=right><p>framename:</td>
+    <td>
     <?php
        if (empty($config->framename)) {
            $config->framename = "_top";
@@ -331,8 +340,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>secureforms:</td>
-	<td>
+    <td align=right><p>secureforms:</td>
+    <td>
     <?php
        unset($options);
        $options[0]  = get_string("no");
@@ -346,8 +355,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>teacherassignteachers:</td>
-	<td>
+    <td align=right><p>teacherassignteachers:</td>
+    <td>
     <?php
        unset($options);
        $options[0]  = get_string("no");
@@ -361,8 +370,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>allowunenroll:</td>
-	<td>
+    <td align=right><p>allowunenroll:</td>
+    <td>
     <?php
        unset($options);
        $options[0]  = get_string("no");
@@ -376,8 +385,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>maxbytes:</td>
-	<td>
+    <td align=right><p>maxbytes:</td>
+    <td>
     <?php
        $options = get_max_upload_sizes();
        choose_from_menu ($options, "maxbytes", $config->maxbytes, "");
@@ -388,8 +397,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>fullnamedisplay:</td>
-	<td>
+    <td align=right><p>fullnamedisplay:</td>
+    <td>
     <?php
        unset($options);
        $options['language']  = get_string('language');
@@ -405,8 +414,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>extendedusernamechars:</td>
-	<td>
+    <td align=right><p>extendedusernamechars:</td>
+    <td>
     <?php
        unset($options);
        $options[0] = get_string("no");
@@ -420,8 +429,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>forcelogin:</td>
-	<td>
+    <td align=right><p>forcelogin:</td>
+    <td>
     <?php
        unset($options);
        $options[0]  = get_string('no');
@@ -435,8 +444,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>forceloginforprofiles:</td>
-	<td>
+    <td align=right><p>forceloginforprofiles:</td>
+    <td>
     <?php
        unset($options);
        $options[0]  = get_string('no');
@@ -450,8 +459,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>opentogoogle:</td>
-	<td>
+    <td align=right><p>opentogoogle:</td>
+    <td>
     <?php
        unset($options);
        $options[0] = get_string("no");
@@ -491,10 +500,10 @@
         <td align=right><p>digestmailtime:</td>
         <td>
     <?php
-    	$hours = array();
-    	for ($i=0; $i<=23; $i++) {
-        	$hours[$i] = sprintf("%02d",$i);
-    	}
+        $hours = array();
+        for ($i=0; $i<=23; $i++) {
+            $hours[$i] = sprintf("%02d",$i);
+        }
         choose_from_menu($hours, 'digestmailtime', $config->digestmailtime, "");
     ?>
     </td>
@@ -507,7 +516,7 @@
 
 <tr>
     <td colspan=3 align=center>
-	<input type="submit" value="<?php print_string("savechanges") ?>"></td>
+    <input type="submit" value="<?php print_string("savechanges") ?>"></td>
 </tr>
 </table>
 
