--- a/mod/forum/config.html
+++ b/mod/forum/config.html
@@ -2,8 +2,8 @@
 
 <table cellpadding=9 cellspacing=0 >
 <tr valign=top>
-	<td align=right><p>forum_displaymode:</td>
-	<td>
+    <td align=right><p>forum_displaymode:</td>
+    <td>
     <?php choose_from_menu ($FORUM_LAYOUT_MODES, "forum_displaymode", $CFG->forum_displaymode, "", "", ""); ?>
     </td>
     <td>
@@ -11,8 +11,22 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>forum_shortpost:</td>
-	<td>
+    <td align=right><p>forum_replytouser:</td>
+    <td>
+    <?php
+       unset($options);
+       $options[0] = get_string("no");
+       $options[1] = get_string("yes");
+       choose_from_menu ($options, "forum_replytouser", $CFG->forum_replytouser, "", "", "");
+    ?>
+    </td>
+    <td>
+    <?php print_string("configreplytouser", "forum") ?>
+    </td>
+</tr>
+<tr valign=top>
+    <td align=right><p>forum_shortpost:</td>
+    <td>
     <input name=forum_shortpost type=text size=5 value="<?php p($CFG->forum_shortpost) ?>">
     </td>
     <td>
@@ -20,8 +34,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>forum_longpost:</td>
-	<td>
+    <td align=right><p>forum_longpost:</td>
+    <td>
     <input name=forum_longpost type=text size=5 value="<?php p($CFG->forum_longpost) ?>">
     </td>
     <td>
@@ -29,8 +43,8 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>forum_manydiscussions:</td>
-	<td>
+    <td align=right><p>forum_manydiscussions:</td>
+    <td>
     <input name=forum_manydiscussions type=text size=5 value="<?php p($CFG->forum_manydiscussions) ?>">
     </td>
     <td>
@@ -38,7 +52,7 @@
     </td>
 </tr>
 <tr valign=top>
-	<td align=right><p>forum_maxbytes:</td>
+    <td align=right><p>forum_maxbytes:</td>
     <td><?php
     $choices = get_max_upload_sizes($CFG->maxbytes);
     choose_from_menu ($choices, "forum_maxbytes", $CFG->forum_maxbytes, "");
@@ -75,7 +89,7 @@
 
 <tr>
     <td colspan=3 align=center>
-	<input type="submit" value="<?php print_string("savechanges") ?>"></td>
+    <input type="submit" value="<?php print_string("savechanges") ?>"></td>
 </tr>
 </table>
 
