Latest translation for Moodle 1.3  by M.Minkowski

--- a/lang/th/help/surveys.html
+++ b/lang/th/help/surveys.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>Available surveys</B></P>
+<P ALIGN=CENTER><B>แบบสำรวจ</B></P>
 
 <P>Currently, Moodle only offers specific types of surveys (future versions 
 will enable you to create your own).</P>
