--- a/lang/th/help/richtext.html
+++ b/lang/th/help/richtext.html
@@ -17,7 +17,7 @@
 พิมพ์ธรรมดาแต่จะแสดงผลในรูปแบบ html 
 
 <P>เพิ่มเติมจากหัวข้อรูปแบบของข้อความ โปรแกรมแก้ไขนี้ยังมีลูกเล่นอีกหลายอย่างที่มีประโยชน์
-สำหรับผู้ใช้ 
+สำหรับสมาชิก 
 
 <P><B>ก้อปปี้และวางข้อความบนนี้ได้</B></P>
 <UL>
