Fixed PHP_SELF and patched some other playing problems

--- a/mod/scorm/mod.html
+++ b/mod/scorm/mod.html
@@ -8,6 +8,9 @@
     if (empty($form->summary)) {
 	$form->summary = "";
     }
+    if (empty($form->launch)) {
+	$form->launch = "";
+    }
     if (empty($form->auto)) {
 	$form->auto = "";
     }
