--- a/lang/it/help/glossary/index.html
+++ b/lang/it/help/glossary/index.html
@@ -13,10 +13,12 @@ File di help a livello Glossario:
   <li><a href="help.php?module=glossary&file=linkcategories.html">Link automatico delle categorie</a>
   <li><a href="help.php?module=glossary&file=allowcomments.html">Permesso di commentare i termini</a>
   <li><a href="help.php?module=glossary&file=allowduplicatedentries.html">Permesso di duplicare i termini</a>
+  <li><a href="help.php?module=glossary&file=rssarticles.html">Numero di articoli recenti di tipo RSS</a>
   <li><a href="help.php?module=glossary&file=entbypage.html">Numero di termini mostrati per pagina</a>
   <li><a href="help.php?module=glossary&file=shows.html">Opzioni relative all'alfabeto per la visualizzazione del Glossario</a>
   <li><a href="help.php?module=glossary&file=defaultapproval.html">Stato di approvazione default</a>
   <li><a href="help.php?module=glossary&file=mainglossary.html">Tipo di Glossario</a>
+  <li><a href="help.php?module=glossary&file=rsstype.html">Tipo di RSS feed per questo glossario</a>
 </ul>
 </blockquote>
 
