--- a/lang/it/help/quiz/import.html
+++ b/lang/it/help/quiz/import.html
@@ -1,8 +1,8 @@
 <P ALIGN=CENTER><B>Importazione di domande</B></P>
 
-<P>Questa funzione permette di importare domande da file di testo esterni, caricati tramite un opportuno form.  
+<P>Questa funzione permette di importare domande da file di testo esterni, caricati tramite un opportuno form.</P>  
 
-<P>Sono supportati diversi formati di file:
+<P>Sono supportati diversi formati di file:</P>
 
 <P><B>Formato GIFT</B></P>
 <ul>
@@ -42,7 +42,7 @@ RISPOSTA: A
 <P><B>Formato Missing Word</B></P>
 <UL>
 <P>Questo formato supporta solamente le domande a risposta multipla.
-Ogni domanda è separata da una tilde (~), e la risposta corretta è preceduta da un segno uguale (=). Segue un esempio:
+Ogni domanda è separata da una tilde (~), e la risposta corretta è preceduta da un segno uguale (=). Segue un esempio:</P>
 
 <BLOCKQUOTE>Appena, da bambini, cominciamo a esplorare le parti del nostro corpo diventiamo studenti {=anatomia e psicologia ~riflessologia 
 ~scienza ~sperimentazione}, e in un certo senso rimaniamo studenti per tutta la vita.
@@ -55,7 +55,7 @@ Ogni domanda è separata da una tilde (~), e la risposta corretta è preceduta da 
 <P><B>Formato AON</B></P>
 <UL>
 <P>Qusto è come il formato a "Missing Word" (a parola mancante), a parte il fatto che dopo l'importazione delle domande, tutte le domande a risposta breve sono trasformate 4 a 4 in domande a corrispondenza.</P>
-<p>Inoltre, le risposte delle domande a risposta multipla sono mescolate a caso durante l'importazione.
+<p>Inoltre, le risposte delle domande a risposta multipla sono mescolate a caso durante l'importazione.</P>
 <p>Prende il nome da un'organizzazione che ha sponsorizzato lo sviluppo di molte caratteristiche dei quiz.</p>
 </UL>
 
@@ -102,9 +102,9 @@ Esistono diversi modi per accedere alla banca dati, che è un database Microsoft 
 
 <P><B>Formato Custom</B></P>
 <UL>
-<P>Se si ha un proprio formato di domande da importare, si può editare il modulo software mod/quiz/format/custom.php
+<P>Se si ha un proprio formato di domande da importare, si può editare il modulo software mod/quiz/format/custom.php.</P>
 
-<P>La quantità di istruzioni da scrivere è modesta - solo quanto basta ad analizzare una singola domanda da un file di testo.
+<P>La quantità di istruzioni da scrivere è modesta - solo quanto basta ad analizzare una singola domanda da un file di testo.</P>
 
 <p align=right><a href="help.php?file=formatcustom.html&module=quiz">Altre informazioni sul formato "Custom"</a></p>
 </UL>
