Revised and translated by Claudio Maggi

--- a/lang/it/help/forum/index.html
+++ b/lang/it/help/forum/index.html
@@ -1,4 +1,4 @@
-<p>Forum</p>
+<p><a href="help.php?module=forum&file=mods.html">Forum</a></p>
 <ul>
   <li><a href="help.php?module=forum&file=allowdiscussions.html">Abilitazione per nuove discussioni</a>
   <li><a href="help.php?module=forum&file=attachment.html">Allegati al messaggio</a>
