--- a/lang/it/help/glossary/index.html
+++ b/lang/it/help/glossary/index.html
@@ -1,4 +1,4 @@
-<p>Glossario</p>
+<p><a href="help.php?module=glossary&file=mods.html">Glossario</a></p>
 
 <blockquote>
 File di help a livello Glossario:
@@ -23,7 +23,7 @@ File di help a livello Glossario:
 </blockquote>
 
 <blockquote>
-File di help a livello Termine:
+File di help a livello Termine del Glossario:
 <ul>
   <li><a href="help.php?module=glossary&file=fullmatch.html">Corrispondenza di parole intere</a>
   <li><a href="help.php?module=glossary&file=casesensitive.html">Corrispondenza esatta con maiuscole e minuscole</a>
