--- a/lang/it/help/quiz/index.html
+++ b/lang/it/help/quiz/index.html
@@ -1,4 +1,4 @@
-<p>Quiz</p>
+<p><a href="help.php?module=quiz&file=mods.html">Quiz</a></p>
 <ul>
   <li><a href="help.php?module=quiz&file=timeopen.html">Apertura e chiusura del quiz</a>
   <li><a href="help.php?module=quiz&file=review.html">Autorizza la revisione dopo la chiusura del quiz</a>
