--- a/lang/it/help/workshop/index.html
+++ b/lang/it/help/workshop/index.html
@@ -1,4 +1,4 @@
-<p>Workshop (Lavoro di gruppo)</p>
+<p><a href="help.php?module=workshop&file=mods.html">Workshop (Lavoro di gruppo)</a></p>
 <ul>
   <li><a href="help.php?module=workshop&file=addingacomment.html">Aggiunta di un Commento</a>
   <li><a href="help.php?module=workshop&file=analysisofassessments.html">Analisi delle valutazioni</a>
