--- a/lang/it/help/resource/index.html
+++ b/lang/it/help/resource/index.html
@@ -1,4 +1,4 @@
-<p>Risorse</p>
+<p><a href="help.php?module=resource&file=mods.html">Risorsa</a></p>
 <ul>
   <li><a href="help.php?module=resource&file=summary.html">Descrizione Risorsa</a>
   <li><a href="help.php?module=resource&file=program.html">Risorse di tipo Programma</a>
