--- a/lang/de/help/lesson/maxanswers.html
+++ b/lang/de/help/lesson/maxanswers.html
@@ -1,5 +1,16 @@
-<p align="center"><b>Die h&ouml;chste Zahl von Antworten in einer Frage dieser Lektion</b></p>
-
-<p>Dieser Wert legt fest, wie viele Antwortvorgaben in dieser Lektion bei einer Frage maximal vorkommen d&uuml;rfen. Die Grundeinstellung ist 4 Fragen. Wenn Sie in Ihrer Lektion nur Richtig-Falsch-Fragen verwenden wollen stellen sie den Wert 2 ein (f&uuml;r Richtig und Falsch). </p>
-
-<p>Tipp: Erstellen Sie erst den Inhalt Ihrer Lektion und Ihre Fragen und setzen Sie dann diesen Wert fest.</p>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+</head>
+<body>
+<p align="center"><b>H&ouml;chzahl der Antwortm&ouml;glichkeiten in
+einer Frage dieser Lektion</b></p>
+<p>Dieser Wert legt fest, wie viele Antwortvorgaben es in dieser
+Lektion bei einer Frage maximal gibt. Die Grundeinstellung ist
+4 (vier) Antwortm&ouml;glichkeiten. Wenn Sie z.B. in Ihrer Lektion nur
+Richtig-Falsch-Fragen verwenden wollen, stellen sie den Wert 2 (zwei)
+ein (f&uuml;r Richtig und Falsch). </p>
+<p>Tipp: Erstellen Sie zuerst den Inhalt und die Fragen Ihrer Lektion
+und legen Sie dann diesen Wert fest.</p>
+</body>
+</html>
