--- a/lang/de/help/lesson/nextpageaction.html
+++ b/lang/de/help/lesson/nextpageaction.html
@@ -1,10 +1,25 @@
-<p align="center"><b>Der n&auml;chste Schritt nach einer richtigen Antwort</b></p>
-
-<p>In den meisten F&auml;llen wird bei der richtigen Antwort die n&auml;chste Seite der Lektion aufgerufen werden. D7e/der Teilnehmer/in arbeitet sich so durch die Lektion vom Anfang bis zum Ende.</p>
-
-<p>Das Lektionen-Modul kann jedoch auch als eine Art Karteikartensystem (Flash Card) genutzt werden.  Die/der Teilnehmer/in erh&auml;lt dann eine Information oder Frage zur Bearbeitung und danach nach dem Zufallsprinzip eine weitere Information/Frage. Dabei gibt es keinen definerten Anfang und kein festgelegtes Ende der Lektion.</p>
-
-<p>Die Option "Zeige eine noch nicht betrachtete Seite" veranlasst, das keine Seite doppelt angezeigt wird (auch wenn die Frage noch nicht richtig beantwortet wurde). Die andere Option "Zeige eine noch nicht beantwortete Seite" zeigt unbearbeitete und noch nicht richtig bearbeitete Seiten an.</p>
-
-<p>Der/die Trainer/in entscheidet, ob alle Seiten der Lektion oder eien Zufallsauswahl angezeigt wird. Die Festlegung erfolgt durch die Option quot;Zahl der angezeigten Seiten (Karten)&quot;.</p>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+</head>
+<body>
+<p align="center"><b>Der n&auml;chste Schritt nach einer richtigen
+Antwort</b></p>
+<p>In den meisten F&auml;llen wird bei der richtigen Antwort die
+n&auml;chste Seite der Lektion aufgerufen. Die/der Teilnehmer/in
+bearbeitet die Lektion so vom Anfang bis zum Ende.</p>
+<p>Das Lektionen-Modul kann jedoch auch als eine Art Karteikartensystem
+(Flash Card) genutzt werden. Die/der Teilnehmer/in erh&auml;lt dann
+eine Information oder Frage zur Bearbeitung und danach nach dem
+Zufallsprinzip eine weitere Information/Frage. Dabei gibt es keinen
+definerten Anfang und kein festgelegtes Ende der Lektion.</p>
+<p>Die Option "Zeige eine noch nicht gesehene Seite" veranlasst, das
+keine Seite doppelt angezeigt wird (auch wenn die Frage noch nicht
+richtig beantwortet wurde). Die andere Option "Zeige eine noch nicht
+beantwortete Seite" zeigt unbearbeitete und noch nicht richtig
+bearbeitete Seiten an.</p>
+<p>Der/die Trainer/in entscheidet, ob alle Seiten der Lektion oder nur
+wenige durch Zufallsauswahl angezeigt werden. Die Festlegung erfolgt
+durch die Option "Zahl der angezeigten Seiten (Karten)".</p>
+</body>
+</html>
