--- a/lang/de/help/lesson/overview.html
+++ b/lang/de/help/lesson/overview.html
@@ -1,25 +1,109 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+</head>
+<body>
 <p align="center"><b>&Uuml;berblick</b></p>
-
 <ol>
-<li>Eine Lektion besteht aus mehreren <b>Seiten</b>.
-<li>Eine Seite stellt den <b>Lerninhalt</b> dar und endet normalerweise mit einer <b>Frage</b>.
-<li>Jeder Seite und ihrer Frage ist im Normalfall eine Reihe von <b>Antworten</b> zugeordnet.
-<li>Jede Antwort kann kurzer Text zugeordnet werden, der angezeigt wird, wenn diese Antwort ausgew&auml;hlt wird. Wir nennen diesen Text <b>R&uuml;ckantwort</b>.
-<li>Zu jeder Antwort geh&ouml;rt ebenso ein <b>Jump</b>. Der Jump kann auf diese Seite, die n&auml;chste Seite in der Lektion (relative Jumps) oder auf eine beliebige andere Seite in einer Lektion oder das Ende der Lektion verweisen (absoluter Jump).
-<li>In der Grundeinstellung springt die erste Seite auf die <b>folgende Seite</b> der Lektion.
-    Bei einer falschen Antwort springt das Programm auf den Anfang der aktuellen Seite zur&uuml;ck.
-<li>Die n&auml;chste Seite ergibt sich aus der <b>logischen Reihenfolge</b> der Lektion. Das ist die Reihenfolge der Seite, wie sie auch der/die Trainer/in sieht. Diese Reihenfolge kann innerhalb der Lektion durch Verschieben ge&auml;ndert werden.
-<li>Die Lektion hat dar&uuml;ber hinaus eine <b>Ablauffolge</b>. Das ist die Reihenfolge in der der/die Teilnehmer/in die Seiten der Lektion sieht. Sie wird durch die Jumps der verschiedenen Antworten festgelegt. und kann sich von der logischen Reihenfolge unterscheiden. Die Ablauffolge kann von der/dem Trainer/in &uuml;berpr&uuml;ft werden.
-<li>Die Antworten werden f&uuml;r die Teilnehmer immer gemischt. Die erste Antwort in der &Uuml;bersicht des/der Trainers/in ist nicht zwangsl&auml;ufig die erste angezeigte Antwort f&uuml;r den/die Teilnehmer/in.
-Es werden immer alel vorgegebenen Antworten gezeigt, jedoch in unterschiedlicher Reihenfolge.
-<li>Die Zahl der Antworren kann von Seite zu Seite variieren.Zum Beispiel sit es m&ouml;glich, dass eine Frage mit richtig oder falsch beantwortet werden mu&szlig; und die n&auml;chste eine richtige Antwort und drei falsche Antwort aufweist.
-<li>Es ist auch m&ouml;glich, Seiten ohne Fragen und Antworten anzulegen. Die Teilnehmer/innen erhalten dann einen <b>Fortsetzen</b> Button anstelle von Antwortvorgaben.
-<li>Wenn Sie die Bearbeitung der Lektion bewerten wollen, f&uuml;hren <b>richtige</b> Antworten zu einer Seite, die in der logischen Hierarchie weiter <i>hinten</i> stehen..
-    <b>Falsche</b> Antworten verweisen dann auf den Anfang der gleichen Seite oder auf eine <b>fr&uuml;here</b> Seite zur&uuml;ck, um den Stoff zu wiederholen. Wenn Sie die Jumps
-    <i>nicht</i> ver&auml;ndern ist die erste Antwort die richtige Antwort, alle anderen Antworten sind falsch.
-<li>Fragen k&ouml;nnen jedoch mehr als eine richtige Antwort haben. Wenn zum Beispiel zwei Antworten einen Jump zur n&auml;chsten Seite enthalten, geht das System davon aus, dass beide Antworten richtige Antworten sind. (Die Teilnehmer/innen werden dann zur gleichen Seite gef&uuml;hrt, unabh&auml;ngig davon welche der beiden richtigen Antworten sie angegeben haben. Die R&uuml;ckantworten zu den abgegeben Antworten k&ouml;nnen jedoch unterschiedlich definiert werden.)
-<li>In der Trainer/innen-Ansicht werden die richtigen Antworten unterstrichen angezeigt.
-<li>Am <b>Ende der Lektion</b> ist erreicht wenn die Seite, die am logischen Ende der Lektion steht bearbeitet wurde. Der/die Teilnehmer/in erh&auml;lt dann einen Gl&uuml;ckwunsch und eine Bewertung. Die Bewertung (Zahl der als richtig ermittelten Antworten/Zahl der bearbeiteten Seiten) wird f&uuml;r die einzelne Lektion ermittelt.
-<li>Wenn die Bearbeitung der Lektion <i>nicht</i> abgeschlossen wurde, kann der/die Teilnehmer/in entscheiden ob er/sie beim n&auml;chsten Start von vorne anf&auml;ngt oder an der Stelle fortsetzt an der er/sie die Bearbeitung mit der letzten richtigen Antwort abgebrochen hat.
-<li> Wenn die Wiederholung der Bearbeitung m&ouml;glich ist, kann diese so lange erfolgen, bis die h&ouml;chste m&ouml;gliche Punktzahl erreicht wurde.
+  <li>Eine Lektion besteht aus mehreren normalen <b>Seiten</b> und
+optionalen <span style="font-weight: bold;">Verzweigungsseiten</span>.<br>
+  </li>
+  <li>Eine Seite stellt den <b>Lerninhalt</b> dar und endet
+normalerweise mit einer <b>Frage</b>.
+  </li>
+  <li>Jeder Seite und ihrer Frage ist im Normalfall eine Reihe von <b>Antworten</b>
+zugeordnet.
+  </li>
+  <li>Jeder Antwort kann kurzer Text zugeordnet werden, der angezeigt
+wird, wenn diese Antwort ausgew&auml;hlt wird. Wir nennen diesen Text <b>R&uuml;ckantwort
+    </b>bzw.<b> Reaktion.</b>
+  </li>
+  <li>Zu jeder Antwort geh&ouml;rt ebenso ein <span
+ style="font-weight: bold;">Sprung.</span> Der <span
+ style="font-weight: bold;">Sprung</span> kann auf diese Seite oder die
+n&auml;chste Seite in der Lektion (sog. relativer Sprung) oder auf eine
+beliebige andere Seite in einer Lektion oder das Ende der Lektion
+verweisen (absoluter Sprung).
+  </li>
+  <li>In der Grundeinstellung verweist der Sprung der ersten Antwort
+einer Frage immer auf die <b>folgende Seite</b> der Lektion. Bei einer
+falschen Antwort springt das Programm auf den Anfang der aktuellen
+Seite zur&uuml;ck. Dadurch wird dem Teilnehmer immer wieder die gleiche
+Seite beim Ausw&auml;hlen der ersten Antwort gezeigt.<br>
+  </li>
+  <li>Die n&auml;chste Seite ergibt sich aus der <b>logischen
+Reihenfolge</b> der Lektion. Das ist die Reihenfolge der Seiten, wie
+sie auch der/die Trainer/in sieht. Diese Reihenfolge kann innerhalb der
+Lektion durch Verschieben ge&auml;ndert werden.
+  </li>
+  <li>Die Lektion hat dar&uuml;ber hinaus eine <b>Ablauffolge</b>. Das
+ist die Reihenfolge in der der/die Teilnehmer/in die Seiten der Lektion
+sieht. Sie wird durch die Spr&uuml;nge der verschiedenen Antworten
+festgelegt. und kann sich von der logischen Reihenfolge stark
+unterscheiden. Die Ablauffolge kann von der/dem Trainer/in
+&uuml;berpr&uuml;ft werden ("Navigation &uuml;berpr&uuml;fen").<br>
+  </li>
+  <li>Die Antworten werden f&uuml;r die Teilnehmer immer gemischt. Die
+erste Antwort in der &Uuml;bersicht des/der Trainers/in ist nicht
+zwangsl&auml;ufig die erste angezeigte Antwort f&uuml;r den/die
+Teilnehmer/in.
+Es werden immer alle vorgegebenen Antworten gezeigt - jedoch in
+unterschiedlicher Reihenfolge.
+  </li>
+  <li>Die Zahl der Antworten kann von Seite zu Seite variieren. Zum
+Beispiel ist es m&ouml;glich, dass eine Frage mit Richtig oder Falsch
+beantwortet werden mu&szlig; und die n&auml;chste eine richtige Antwort
+und drei falsche Antworten aufweist.
+  </li>
+  <li>Es ist auch m&ouml;glich Seiten <span style="font-style: italic;">ohne</span>
+Fragen und Antworten anzulegen. Die Teilnehmer/innen erhalten dann
+einen <b>Fortsetzen</b> Knopf anstelle von Antwortvorgaben.
+  </li>
+  <li>Wenn Sie die Bearbeitung der Lektion bewerten wollen, f&uuml;hren
+    <b>richtige</b> Antworten zu einer Seite, die in der <span
+ style="font-weight: bold;">logischen Reihenfolge</span> weiter <i>hinten</i>
+stehen. <b>Falsche</b> Antworten verweisen dann auf den Anfang der
+gleichen Seite oder auf eine <b>fr&uuml;here</b> Seite zur&uuml;ck, um
+den Stoff zu wiederholen. Wenn Sie die Spr&uuml;nge <i>nicht</i>
+ver&auml;ndern, ist die erste Antwort die richtige Antwort, alle
+anderen Antworten sind falsch.
+  </li>
+  <li>Fragen k&ouml;nnen jedoch mehr als eine richtige Antwort haben.
+Wenn zum Beispiel zwei Antworten einen Sprung zur n&auml;chsten Seite
+enthalten, geht das Moodle davon aus, dass beide Antworten richtige
+Antworten sind. (Die Teilnehmer/innen werden dann zur gleichen Seite
+gef&uuml;hrt - unabh&auml;ngig davon welche der beiden richtigen
+Antworten sie angegeben haben. Die R&uuml;ckantworten zu den
+abgegebenen Antworten k&ouml;nnen jedoch unterschiedlich definiert
+werden.)
+  </li>
+  <li>In der Trainer/innen-Ansicht werden die richtigen Antworten <span
+ style="font-weight: bold;">unterstrichen</span> angezeigt.</li>
+  <li><span style="font-weight: bold;">Verzweigungsseiten</span>.</li>
+  <li>.</li>
+  <li>.</li>
+  <li>.</li>
+  <li>.</li>
+  <li>.</li>
+  <li><br>
+  </li>
+  <li>Das <b>Ende der Lektion</b> ist erreicht wenn die Seite, die am
+logischen Ende der Lektion steht bearbeitet wurde. Der/die
+Teilnehmer/in erh&auml;lt dann einen Gl&uuml;ckwunsch und eine
+Bewertung. Die Bewertung (Zahl der als richtig ermittelten
+Antworten/Zahl der bearbeiteten Seiten) wird f&uuml;r die einzelne
+Lektion ermittelt.
+  </li>
+  <li>Wenn die Bearbeitung der Lektion <i>nicht</i> abgeschlossen
+wurde, kann der/die Teilnehmer/in entscheiden ob er/sie beim
+n&auml;chsten Start von vorne anf&auml;ngt oder an der Stelle fortsetzt
+an der er/sie die Bearbeitung mit der letzten richtigen Antwort
+abgebrochen hat.
+  </li>
+  <li> Wenn die Wiederholung der Bearbeitung m&ouml;glich ist, kann
+diese so lange erfolgen, bis die h&ouml;chste m&ouml;gliche Punktzahl
+erreicht wurde.
+  </li>
 </ol>
+</body>
+</html>
