--- a/backup/restore_form.html
+++ b/backup/restore_form.html
@@ -510,7 +510,7 @@ function selectItemInCheckboxByName(formId, checkName, checked ) {
       
     }
 ?>
-</td></tr></table>
+</table>
 
 <hr/>
 <?php
