--- a/theme/custom_corners/footer.html
+++ b/theme/custom_corners/footer.html
@@ -2,7 +2,7 @@
 <?php print_custom_corners_end(false, 'content'); ?>
 </div> <!-- end div containerContent -->
 <!-- START OF FOOTER -->
-<?php global $CFG, $course; ?>
+<?php global $CFG, $COURSE; ?>
 <div id="footer">
     <?php print_custom_corners_start(); ?>
 <?php
