--- a/admin/mnet/mnet_review.html
+++ b/admin/mnet/mnet_review.html
@@ -10,6 +10,7 @@ admin_externalpage_print_header();
 if (isset($mnet_peer->id) && $mnet_peer->id > 0) {
     $tabs[] = new tabobject('mnetdetails', 'peers.php?step=update&amp;hostid='.$mnet_peer->id, $strmnetedithost, $strmnetedithost, false);
     $tabs[] = new tabobject('mnetservices', 'mnet_services.php?step=list&amp;hostid='.$mnet_peer->id, $strmnetservices, $strmnetservices, false);
+    $tabs[] = new tabobject('mnetthemes', 'mnet_themes.php?step=list&amp;hostid='.$mnet_peer->id, $strmnetthemes, $strmnetthemes, false);
     if ($mnet_peer->application->name == 'moodle') {
         $tabs[] = new tabobject('mnetlog', $logurl, $strmnetlog, $strmnetlog, false);
     }
