--- a/admin/mnet/mnet_review_allhosts.html
+++ b/admin/mnet/mnet_review_allhosts.html
@@ -3,6 +3,7 @@ admin_externalpage_print_header();
 
 $tabs[] = new tabobject('mnetdetails', 'peers.php?step=update&amp;hostid='.$mnet_peer->id, $strmnetedithost, $strmnetedithost, false);
 $tabs[] = new tabobject('mnetservices', 'mnet_services.php?step=list&amp;hostid='.$mnet_peer->id, $strmnetservices, $strmnetservices, false);
+$tabs[] = new tabobject('mnetthemes', 'mnet_themes.php?step=list&amp;hostid='.$mnet_peer->id, $strmnetthemes, $strmnetthemes, false);
 print_tabs(array($tabs), 'mnetdetails');
 
 print_simple_box_start("center", "");
