--- a/admin/mnet/mnet_services.html
+++ b/admin/mnet/mnet_services.html
@@ -9,6 +9,7 @@ $logurl = $CFG->wwwroot.
 
 $tabs[] = new tabobject('mnetdetails', 'peers.php?step=update&amp;hostid='.$mnet_peer->id, $strmnetedithost, $strmnetedithost, false);
 $tabs[] = new tabobject('mnetservices', 'mnet_services.php?step=list&amp;hostid='.$mnet_peer->id, $strmnetservices, $strmnetservices, false);
+$tabs[] = new tabobject('mnetthemes', 'mnet_themes.php?step=list&amp;hostid='.$mnet_peer->id, $strmnetthemes, $strmnetthemes, false);
 if ($mnet_peer->id != $CFG->mnet_all_hosts_id && $mnet_peer->application->name == 'moodle') {
     $tabs[] = new tabobject('mnetlog', $logurl, $strmnetlog, $strmnetlog, false);
 }
