MDL-11492 help file re-write

--- a/lang/en_utf8/help/resource/type/ims.html
+++ b/lang/en_utf8/help/resource/type/ims.html
@@ -1,12 +1,7 @@
 <h1>IMS Content Packages</h1>
 
 <div class="indent">
-
-<p>This resource type allows you add packages conforming to the
-   <a href="http://www.imsglobal.org/content/packaging/index.html"
-   target="_new">IMS content packaging specifications</a> to your course.</p>
-
-<p>Simply upload a zipped package and deploy.</p>
+<p>IMS content packages can be created and edited using a variety of content-authoring software. Content is usually displayed over several pages, with navigation between the pages. The content-authoring software produces a zip file, which can then be uploaded to your course in Moodle.</p>
+<p>The zip file is unzipped automatically in Moodle, and the content of the package displayed.</p>
 <p>There are various options for displaying content in a popup window, with a navigation menu or buttons etc.</p>
-
 </div>
